[project]
name = "mtl"
version = "1.0.0"
authors = [
  { name="We Are In Space", email="weareinspace.net@gmail.com" }
]
description = "A Tools that makes you easily write HTML in Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
